--- a/assets/sass/styles/_mpwem_style.scss
+++ b/assets/sass/styles/_mpwem_style.scss
@@ -600,6 +600,7 @@ ul.mep-social-share a {
 
 .mep-share-btn-title{
 	margin-bottom: 20px;
+	display: block;
 }
 
 ul.mep-social-share {
